--- a/src/app/pages/customers-page/customer-view/customer-add-new/customer-add-new.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-add-new/customer-add-new.component.html
@@ -2,7 +2,7 @@
 
   <div class="entity-view__card__header">
     <div class="entity-view__card__header__title">
-      Create new Customer
+      {{'CUSTOMER_INFO_CREATETITLE' | translate}}
     </div>
   </div>
 
