--- a/src/app/pages/customers-page/customers-index/customers.component.html
+++ b/src/app/pages/customers-page/customers-index/customers.component.html
@@ -1,7 +1,7 @@
 <div class="entity-index">
   <div class="entity-index__title">
-    Customers
-    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+    {{'CUSTOMER_INDEX_TITLE' | translate}}
+    <md-input [(ngModel)]="filterValue" placeholder="{{'INDEXPAGE_FILTER' | translate}}"></md-input>
   </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" (click)="openAddMode()" class="entity-index__add"><md-icon>add</md-icon></button>
