--- a/src/app/navigation/notifications-quick/notifications-quick.component.html
+++ b/src/app/navigation/notifications-quick/notifications-quick.component.html
@@ -7,40 +7,49 @@
   </div>
 
   <div class="notifications-list__content">
-    <div class="notifications-list__content__no-results" *ngIf="isEmpty">{{'NOTIFICATIONSQUICK_NORESULTS' | translate}}</div>
 
-    <ng-container *ngIf="alerts && alerts.length > 0" >
-      <div class="notifications-list__content__title">{{'NOTIFICATIONSQUICK_ALERTS' | translate}}</div>
-      <alert-component class="notifications-list__content__alert"
-                       *ngFor="let alert of alerts"
-                       (clear)="readNotification($event)"
-                       [alert]="alert">
-      </alert-component>
-    </ng-container>
+    <ng-container *ngIf="loaded; else loader">
 
-    <div *ngFor="let notificationsByDate of notsByDate">
+      <div class="notifications-list__content__no-results" *ngIf="isEmpty">{{'NOTIFICATIONSQUICK_NORESULTS' | translate}}</div>
 
-      <div *ngIf="notificationsByDate.entities.length > 0">
-        <div class="notifications-list__content__title">{{notificationsByDate.label | translate}}</div>
+      <ng-container *ngIf="alerts && alerts.length > 0" >
+        <div class="notifications-list__content__title">{{'NOTIFICATIONSQUICK_ALERTS' | translate}}</div>
+        <alert-component class="notifications-list__content__alert"
+                         *ngFor="let alert of alerts"
+                         (clear)="readNotification($event)"
+                         [alert]="alert">
+        </alert-component>
+      </ng-container>
 
-        <div *ngFor="let notification of notificationsByDate.entities">
-          <div class="notifications-list__content__notification" (click)="readNotification(notification)">
-            <div class="notifications-list__content__notification__image"><img src="assets/images/{{notification.getIconName()}}" alt=""></div>
-            <div class="notifications-list__content__notification__message">
-              <div>{{notification.body}}</div>
-              <div class="notifications-list__content__notification__message__date">
-                {{notification.createdAt.format('MMMM Do [at] h:mm A')}}
+      <div *ngFor="let notificationsByDate of notsByDate">
+
+        <div *ngIf="notificationsByDate.entities.length > 0">
+          <div class="notifications-list__content__title">{{notificationsByDate.label | translate}}</div>
+
+          <div *ngFor="let notification of notificationsByDate.entities">
+            <div class="notifications-list__content__notification" (click)="readNotification(notification)">
+              <div class="notifications-list__content__notification__image"><img src="assets/images/{{notification.getIconName()}}" alt=""></div>
+              <div class="notifications-list__content__notification__message">
+                <div>{{notification.body}}</div>
+                <div class="notifications-list__content__notification__message__date">
+                  {{notification.createdAt.format('MMMM Do [at] h:mm A')}}
+                </div>
               </div>
-            </div>
-            <div class="notifications-list__content__notification__read">
-              <div [class.unread]="!notification.readAt"></div>
+              <div class="notifications-list__content__notification__read">
+                <div [class.unread]="!notification.readAt"></div>
+              </div>
             </div>
           </div>
         </div>
+
       </div>
 
-    </div>
+    </ng-container>
   </div>
+
+  <ng-template #loader>
+    <table-loader [rowMarginVertical]="30" [rowHeight]="45" [numberOfRows]="12"></table-loader>
+  </ng-template>
 
   <div class="notifications-list__view-all">
     <span (click)="navigateAllNotifications()">{{'NOTIFICATIONSQUICK_VIEWALL' | translate}}</span>
