--- a/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
@@ -1,20 +1,23 @@
 <div class="entity-view__card input-form" [class.entity-view__card--create]="mode === modes.Add">
   <div class="entity-view__card__header">
-    <div>
-      <div class="entity-view__card__header__title">Email Template Details</div>
-      <div class="entity-view__card__header__subtitle">Edit HTML templates below or load defaults from right menu</div>
+    <div *ngIf="mode !== modes.Add; else add">
+      <div class="entity-view__card__header__title">{{'EMAILTEMPLATE_INFO_TITLE' | translate}}</div>
+      <div class="entity-view__card__header__subtitle">{{'EMAILTEMPLATE_INFO_SUBTITLE' | translate}}</div>
     </div>
+    <ng-template #add>
+      <div class="entity-view__card__header__title">{{'EMAILTEMPLATE_INFO_CREATETITLE' | translate}}</div>
+    </ng-template>
     <ng-container *ngIf="mode !== modes.Add">
       <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
       <md-menu #editOptions="mdMenu" x-position="before">
-        <button md-menu-item (click)="changeMode.emit(modes.Update)"> Edit Email Template Details</button>
+        <button md-menu-item (click)="changeMode.emit(modes.Update)">{{'EMAILTEMPLATE_INFO_EDIT' | translate}}</button>
       </md-menu>
     </ng-container>
   </div>
 
   <form form #emailTemplateInput="ngForm" class="entity-view__card__content">
     <md-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item email-template-view__input">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Name" name="name" [(ngModel)]="entity.name" type="text">
+      <input required md-input [disabled]="mode === modes.View" placeholder="{{'EMAILTEMPLATE_INFO_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
     </md-input-container>
 
     <dropdown-component class="email-template-view__dropdown"
@@ -22,7 +25,7 @@
                         [disabled]="mode === modes.View"
                         [options]="types"
                         [selected]="entity.type"
-                        [placeholder]="'Template Type'"
+                        [placeholder]="'EMAILTEMPLATE_INFO_TYPE' | translate"
                         (onSelect)="entity.type = $event">
     </dropdown-component>
 
@@ -32,16 +35,16 @@
                         [options]="smtpProviderService.entities$ | async"
                         [mapper]="smtpProviderMapper"
                         [selected]="entity.smtpProvider"
-                        [placeholder]="'SMTP Provider'"
+                        [placeholder]="'EMAILTEMPLATE_INFO_SMTPPROVIDER' | translate"
                         (onSelect)="entity.smtpProvider = $event">
     </dropdown-component>
 
     <md-input-container [class.error]="formInvalid && !entity.subject" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" name="subject" placeholder="Subject" [(ngModel)]="entity.subject" type="text">
+      <input required md-input [disabled]="mode === modes.View" name="subject" placeholder="{{'EMAILTEMPLATE_INFO_SUBJECT' | translate}}" [(ngModel)]="entity.subject" type="text">
     </md-input-container>
 
     <ng-container *ngIf="mode !== modes.Add">
-      <div class="email-template-view__label">Email Template Body</div>
+      <div class="email-template-view__label">{{'EMAILTEMPLATE_INFO_BODY' | translate}}</div>
       <div [class.editor-container--hidden]="mode === modes.View" class="editor-container">
         <div id="editor-id"></div>
       </div>
@@ -52,7 +55,7 @@
   </form>
 
   <div *ngIf="mode !== modes.View" class="entity-view__card__actions">
-    <div (click)="cancel.emit(true)">CANCEL</div>
-    <div (click)="saveEmailTemplate(emailTemplateInput.form.valid)">SAVE</div>
+    <div (click)="cancel.emit(true)">{{'EMAILTEMPLATE_INFO_CANCEL' | translate}}</div>
+    <div (click)="saveEmailTemplate(emailTemplateInput.form.valid)">{{'EMAILTEMPLATE_INFO_SAVE' | translate}}</div>
   </div>
 </div>
